--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-portfolio",
+  "homepage": "http://egatortutorials.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
